--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,22 +2,21 @@
 <html>
 <head>
   <title>Books</title>
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="body">
 <div class="container">
 	<div class="offset-by-one">
 		<div class="six columns">
 			<h1 id="h1">books</h1>
 		</div>
 	</div>
-	<div id="header" class="six columns">
-	<%= yield %>
+	<br class="clear fix">
+	
+	<div class="offset-by-three">
+		<%= yield %>
 	</div>
 </div>
 
