--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,8 @@
 <div id="header" class="nine columns">
 	<div class='offset-by-three'>
-	<h1><strong  class="texts"><%= @book.title %></strong></h1>
+	<h1>
+		<strong  class="texts"><%= @book.title %></strong>
+	</h1>
 	<h3 class="texts"><%= @book.author %></h3>
 
 	<ul>
